--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "@react-navigation/stack": "^6.0.9",
+    "lottie-react-native": "^4.1.3",
     "react": "17.0.2",
     "react-native": "0.66.0",
+    "react-native-animated-loader": "^0.0.9",
+    "react-native-animated-spinkit": "^1.5.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-slider-box": "^1.1.8",
     "react-native-pager-view": "^5.4.6",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-spinkit": "^1.5.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0"
   },
