--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.2.2",
     "@react-navigation/stack": "^6.0.9",
     "axios": "^0.22.0",
+    "is-arrayish": "^0.2.1",
     "lottie-react-native": "^4.1.3",
     "react": "17.0.2",
     "react-native": "0.66.0",
@@ -25,6 +26,8 @@
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-slider-box": "^1.1.8",
+    "react-native-image-view": "^2.1.9",
+    "react-native-image-viewing": "^0.2.0",
     "react-native-pager-view": "^5.4.6",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
