--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.0.9",
     "axios": "^0.22.0",
     "is-arrayish": "^0.2.1",
+    "lodash.filter": "^4.6.0",
     "lottie-react-native": "^4.1.3",
     "react": "17.0.2",
     "react-native": "0.66.0",
