--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-animated-loader": "^0.0.9",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.1.2",
     "react-native-image-slider-box": "^1.1.8",
     "react-native-image-view": "^2.1.9",
     "react-native-image-viewing": "^0.2.0",
