--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fawazahmed/react-native-read-more": "^2.2.0",
     "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.7",
